Fix action title display on mobile devices

--- a/resources/app/src/assets/scss/components/_loanactions.scss
+++ b/resources/app/src/assets/scss/components/_loanactions.scss
@@ -55,10 +55,14 @@
       font-size: 28px;
       margin-bottom: 0;
 
+      padding-left: 69px;
+
       svg {
         margin-right: 30px;
         width: 39px;
         height: 39px;
+        position: absolute;
+        left: 20px;
       }
     }
 
