--- a/resources/app/src/assets/scss/components/_navbar.scss
+++ b/resources/app/src/assets/scss/components/_navbar.scss
@@ -15,6 +15,7 @@
         position: absolute;
         top: #{$layout-navbar-height-mobile - 13};
         left: 0;
+        right: 0;
         width: 100vw;
         z-index: 1000;
         background: $white;
